Fix menu on mobile

--- a/source/css/menu.css
+++ b/source/css/menu.css
@@ -1,10 +1,12 @@
 ul.menu{
     overflow: hidden;
-    position: fixed;
+    position: relative;
     top: 2em;
     left: 1em;
     list-style: none;
     white-space: nowrap;
+    text-align: left;
+    margin-bottom: 4em;
 }
 
 ul.menu li a {
